...
          flexDirection: "row",
          paddingLeft: 8,
          paddingTop: 8,
        }}
      >
        <TextInput
          testID="input"
          value={message}
          onChangeText={setMessage}
          mode="outlined"
          // multiline
          contentStyle={{ alignContent: "center" }}
          style={{ flex: 1, lineHeight: 24, maxHeight: 96 }}
...
            paddingHorizontal: 10,
            maxWidth: "80%",
            alignSelf: isSameId ? "flex-end" : "flex-start",
          }}
        >
          <Text
            testID="message"
            style={{
              color: isSameId ? colors.onPrimary : colors.onSecondaryContainer,
            }}
          >
            {content}
          </Text>
...
