<resources>
    <string name="app_name">FairyTable</string>
</resources>
