...
                    onPress={() => {
                        setIsVisible(true);
                    }}
                    disabled={cart.length === 0}
                    mode="contained"
                >
                    Apmokėti
                </Button>
            </SafeAreaView>
            <PaymentModal
                total={total}
                visible={isVisible}
                onDismiss={() => {
...
