...
                    {isLoading ? (
                        <Animated.View style={{ height: 40 }}>
                            <ActivityIndicator size="large" color={colors.primary} />
                        </Animated.View>
                    ) : (
                        <Animated.View style={{ height: 40 }}>
                            <Button onPress={pay}>Apmoketi</Button>
                        </Animated.View>
                    )}
                </Dialog.Actions>
            </Dialog>
        </Portal>
    );
...
